# decoupled-execution-experiment

./: CHANGELOG.md  Cargo.toml
client/basic-authorship/: Cargo.toml
client/basic-authorship/src/: basic_authorship.rs
client/block-builder/: Cargo.toml
client/block-builder/src/: lib.rs
client/cli/: Cargo.toml
client/executor-discovery/: Cargo.toml
client/executor-discovery/src/: lib.rs
client/service/: Cargo.toml
client/service/src/client/: client.rs
kitchen-node/: Cargo.toml
kitchen-node/src/: chain_spec.rs  service.rs
node/: Cargo.toml
node/src/: chain_spec.rs  service.rs
pallets/exec-membership/: Cargo.toml
pallets/exec-membership/exec-membership-runtime/: Cargo.toml
pallets/exec-membership/exec-membership-runtime/src/: lib.rs
pallets/exec-membership/src/: lib.rs
pallets/exec-receipt-storage/: Cargo.toml  types.json
pallets/exec-receipt-storage/exec-receipt-storage-runtime/: Cargo.toml
pallets/exec-receipt-storage/exec-receipt-storage-runtime/src/: lib.rs
pallets/exec-receipt-storage/src/: lib.rs
pallets/executive/: Cargo.toml
pallets/generic-event/: Cargo.toml
pallets/generic-event/src/: lib.rs
pallets/hello/: Cargo.toml
pallets/hello/src/: lib.rs  mock.rs  tests.rs
pallets/manual-seal/: Cargo.toml
pallets/manual-seal/src/: lib.rs  seal_block.rs
pallets/manual-seal/src/consensus/: babe.rs
pallets/simple-event/: Cargo.toml
pallets/simple-event/src/: lib.rs
primitives/core/: Cargo.toml
primitives/executor/: Cargo.toml  README.md
primitives/executor/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
super-runtime/: Cargo.toml
super-runtime/src/: genesis.rs  lib.rs
test-utils/client/: Cargo.toml
test-utils/runtime/: Cargo.toml
test-utils/runtime/client/: Cargo.toml
test-utils/runtime/client/src/: block_builder_ext.rs
test-utils/runtime/transaction-pool/: Cargo.toml
