[package]
name = "sc-basic-authorship"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.9"
futures-timer = "3.0.1"
log = "0.4.8"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", path = "../../utils/prometheus", version = "0.9.0"}
sp-api = { version = "3.0.0" }
sp-runtime = { version = "3.0.0" }
sp-core = { version = "3.0.0" }
sp-blockchain = { version = "3.0.0" }
sc-client-api = { version = "3.0.0" }
sp-consensus = { version = "0.9.0" }
sp-inherents = { version = "3.0.0" }
sc-telemetry = { version = "3.0.0" }
sp-transaction-pool = { version = "3.0.0" }
sc-block-builder = { version = "0.9.0", path = "../block-builder" }
sc-proposer-metrics = { version = "0.9.0"}
sp-keystore = {version = '0.9.0'}
executor-discovery = { path = "../../client/executor-discovery"}
exec-membership-runtime = { path = '../../pallets/exec-membership/exec-membership-runtime'}
sp-executor = { path = "../../primitives/executor", default-features = false }

[dev-dependencies]
sc-transaction-pool = { version = "3.0.0"}
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
parking_lot = "0.11.1"
