[package]
name = "sc-block-builder"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate block builder"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-state-machine = { version = "0.9.0" }
sp-runtime = { version = "3.0.0" }
sp-api = { version = "3.0.0" }
sp-consensus = { version = "0.9.0" }
sp-blockchain = { version = "3.0.0" }
sp-core = { version = "3.0.0" }
sp-block-builder = { version = "3.0.0" }
sp-inherents = { version = "3.0.0" }
sc-client-api = { version = "3.0.0" }
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }

[dev-dependencies]
substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }
sp-trie = { version = "3.0.0" }
