[package]
name = "exec-membership"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "Executors membership for decoupling consensus"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = "2.0", features = ["derive"], default-features = false }
serde = '1.0'

# Substrate packages
pallet-balances = { version = '3.0', default-features = false }
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
# sp-executor = { path = "../../primitives/executor", default-features = false }

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'

[features]
default = ['std']
std = [
	'pallet-balances/std',
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-runtime/std',
	# 'sp-executor/std',
]
