[package]
name = "simple-event"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A pallet that emits simple events that do not encapsulate generic data types"
license = "GPL-3.0-or-later"

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}
log = { version = "0.4.14", default-features = false }
serde = { version = '1.0', default-features = false, features = ['derive'] }

# Substrate packages
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-05'}
[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'sp-runtime/std',
	'log/std',
]
