[package]
name = "sp-executor"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Primitives for EXECUTOR integration, suitable for WASM compilation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.8", optional = true }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "3.0.0", default-features = false }
sp-application-crypto = { version = "3.0.0", default-features = false }
sp-core = { version = "3.0.0", default-features = false }
sp-keystore = { version = "0.9.0", default-features = false, optional = true }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false}
# sp-blockchain = { version = "3.0.0" }

# exec-membership-runtime = { path = '../../pallets/exec-membership/exec-membership-runtime', default-features = false }


[features]
default = ["std"]
std = [
	"log",
	"serde",
	"codec/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
	# "exec-membership-runtime/std",
]
