[package]
name = "exec-membership-runtime"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A charitable organization that accepts donations and imbalances"
license = "GPL-3.0-or-later"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate packages
sp-api = { version = "3.0.0", default-features = false}
sp-core = { version = "3.0.0", default-features = false}
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
